--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>crypto-insights</title>
+    <title>chart pulse</title>
     <meta name="description" content="" />
-    <meta name="author-NextThread" content="crypto-insights" />
+    <meta name="author-NextThread" content="chart-pulse" />
     <meta property="og:image" content="" />
   </head>
 
