--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="" />
     <meta name="author-NextThread" content="chart-pulse" />
     <meta property="og:image" content="" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7557818962546926"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
